--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 html, body {
-  background-color: #F0EFE9;
+  background-color: white;
   margin: 0;
   font-size: 16px;
   font-weight: 400;
@@ -22,7 +22,12 @@ html, body {
   align-items: center;
   background-color: #F9D783;
 }
-@media (max-width: 500px) {
+@media (max-width: 992px) {
+  .login-button {
+    width: 110px;
+  }
+}
+@media (max-width: 768px) {
   .login-button {
     margin: auto;
     margin-top: 18px;
@@ -37,55 +42,79 @@ html, body {
 }
 
 header {
+  width: 100%;
+  background-color: #F0EFE9;
+}
+header .header-container {
   margin: auto;
   height: 120px;
   width: 1300px;
   display: flex;
 }
-@media (max-width: 500px) {
-  header {
+@media (max-width: 1400px) {
+  header .header-container {
+    width: 1000px;
+  }
+}
+@media (max-width: 1200px) {
+  header .header-container {
+    width: 800px;
+  }
+}
+@media (max-width: 992px) {
+  header .header-container {
+    width: 600px;
+  }
+}
+@media (max-width: 768px) {
+  header .header-container {
     position: relative;
     width: 100%;
   }
 }
-header img {
+header .header-container img {
   width: 137px;
   margin-right: 3vw;
 }
-@media (max-width: 500px) {
-  header img {
+@media (max-width: 768px) {
+  header .header-container img {
     margin-left: 3vw;
-    width: 270px;
+    min-width: 170px;
   }
 }
-header .header {
+header .header-container .header {
   position: relative;
   width: 100%;
 }
-@media (max-width: 500px) {
-  header .header {
+@media (max-width: 768px) {
+  header .header-container .header {
     position: static;
   }
 }
-header .header .contact {
+header .header-container .header .contact {
   display: flex;
   margin-top: 12px;
   padding-bottom: 10px;
   border-bottom: 1px solid #cacaca;
 }
-@media (max-width: 500px) {
-  header .header .contact {
+@media (max-width: 768px) {
+  header .header-container .header .contact {
     display: none;
   }
 }
-header .header .info {
+header .header-container .header .info {
   width: 200px;
   margin-left: 0.2vw;
   margin-right: 0.2vw;
   font-size: 15px;
   position: relative;
 }
-header .header .info::after {
+@media (max-width: 1200px) {
+  header .header-container .header .info {
+    display: none;
+  }
+}
+header .header-container .header .info::after {
   content: "";
   position: absolute;
   right: 0;
@@ -93,39 +122,50 @@ header .header .info::after {
   height: 90%;
   background-color: #cacaca;
 }
-header .header .info i {
+header .header-container .header .info i {
   margin: 0.1vw;
   font-size: 20px;
   color: #191919;
 }
-header .header #location-social {
+header .header-container .header #location-social {
   width: calc(100% - 370px);
   display: flex;
   justify-content: space-between;
 }
-header .header #location-social::after {
+@media (max-width: 1200px) {
+  header .header-container .header #location-social {
+    justify-content: end;
+    width: 100%;
+  }
+}
+header .header-container .header #location-social::after {
   display: none;
 }
-header .header #location-social .social i {
+@media (max-width: 1200px) {
+  header .header-container .header #location-social .location {
+    display: none;
+  }
+}
+header .header-container .header #location-social .social i {
   font-size: 16px;
   margin-right: 0.3vw;
 }
-header .header #location-social .social i:hover {
+header .header-container .header #location-social .social i:hover {
   color: #5a5a5a;
 }
-header .header .nav {
+header .header-container .header .nav {
   width: 100%;
   justify-content: space-between;
   position: absolute;
   bottom: 0;
 }
-@media (min-width: 501px) {
-  header .header .nav {
+@media (min-width: 769px) {
+  header .header-container .header .nav {
     display: flex !important;
   }
 }
-@media (max-width: 500px) {
-  header .header .nav {
+@media (max-width: 768px) {
+  header .header-container .header .nav {
     display: none;
     background-color: rgba(240, 239, 233, 0.9647058824);
     z-index: 999;
@@ -134,25 +174,30 @@ header .header .nav {
     height: 410px;
   }
 }
-header .header .nav nav {
+header .header-container .header .nav nav {
   width: 306px;
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
-  header .header .nav nav {
+@media (max-width: 992px) {
+  header .header-container .header .nav nav {
+    width: 290px;
+  }
+}
+@media (max-width: 768px) {
+  header .header-container .header .nav nav {
     width: 100%;
     display: block;
   }
 }
-header .header .nav nav a {
+header .header-container .header .nav nav a {
   text-decoration: none;
   color: #191919;
   margin-bottom: 11px;
   position: relative;
 }
-@media (max-width: 500px) {
-  header .header .nav nav a {
+@media (max-width: 768px) {
+  header .header-container .header .nav nav a {
     text-align: center;
     margin: 0;
     width: 100%;
@@ -161,11 +206,11 @@ header .header .nav nav a {
     display: block;
     font-size: 1.1rem;
   }
-  header .header .nav nav a:hover {
+  header .header-container .header .nav nav a:hover {
     background-color: rgba(0, 0, 0, 0.068);
   }
 }
-header .header .nav nav a:hover::after {
+header .header-container .header .nav nav a:hover::after {
   content: "";
   margin: auto;
   position: absolute;
@@ -176,12 +221,12 @@ header .header .nav nav a:hover::after {
   height: 2px;
   background-color: #191919;
 }
-@media (max-width: 500px) {
-  header .header .nav nav a:hover::after {
+@media (max-width: 768px) {
+  header .header-container .header .nav nav a:hover::after {
     display: none;
   }
 }
-header .header .nav nav #here::after {
+header .header-container .header .nav nav #here::after {
   content: "";
   margin: auto;
   position: absolute;
@@ -192,12 +237,12 @@ header .header .nav nav #here::after {
   height: 2px;
   background-color: #191919;
 }
-@media (max-width: 500px) {
-  header .header .nav nav #here::after {
+@media (max-width: 768px) {
+  header .header-container .header .nav nav #here::after {
     display: none;
   }
 }
-header .header .menu {
+header .header-container .header .menu {
   border: none;
   position: absolute;
   right: 3vw;
@@ -205,105 +250,339 @@ header .header .menu {
   background-color: transparent;
   border-radius: 5px;
 }
-@media (min-width: 501px) {
-  header .header .menu {
+@media (min-width: 769px) {
+  header .header-container .header .menu {
     display: none;
   }
 }
-header .header .menu:hover {
+header .header-container .header .menu:hover {
   background-color: rgba(0, 0, 0, 0.068);
   cursor: pointer;
 }
-header .header .menu i {
+header .header-container .header .menu i {
   font-size: 2.8rem;
 }
 
-section {
+.showcase-section {
   position: relative;
+  background-color: #F0EFE9;
 }
-section .element {
+.showcase-section .element {
+  width: 650px;
   position: absolute;
   bottom: 0;
   left: 0;
   pointer-events: none;
 }
-@media (max-width: 500px) {
-  section .element {
+@media (max-width: 1400px) {
+  .showcase-section .element {
+    width: 500px;
+  }
+}
+@media (max-width: 768px) {
+  .showcase-section .element {
     display: none;
   }
 }
-section .showcase-section {
+.showcase-section .showcase-container {
   width: 1300px;
   margin: auto;
   display: flex;
 }
-@media (max-width: 500px) {
-  section .showcase-section {
+@media (max-width: 1400px) {
+  .showcase-section .showcase-container {
+    width: 1000px;
+    align-items: center;
+  }
+}
+@media (max-width: 1200px) {
+  .showcase-section .showcase-container {
+    width: 800px;
+  }
+}
+@media (max-width: 992px) {
+  .showcase-section .showcase-container {
+    width: 600px;
+  }
+}
+@media (max-width: 768px) {
+  .showcase-section .showcase-container {
     width: 100%;
   }
 }
-section .showcase-section .showcase h1 {
+.showcase-section .showcase-container .showcase h1 {
   font-size: 86px;
   margin: 0;
   margin-top: 100px;
 }
-@media (max-width: 500px) {
-  section .showcase-section .showcase h1 {
+@media (max-width: 1400px) {
+  .showcase-section .showcase-container .showcase h1 {
+    font-size: 3.5rem;
+    margin-left: 25px;
+    margin-top: 0;
+  }
+}
+@media (max-width: 1200px) {
+  .showcase-section .showcase-container .showcase h1 {
+    text-align: center;
+    margin: 15px;
+    margin-top: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .showcase-section .showcase-container .showcase h1 {
     font-size: 3rem;
     margin: 10px;
     text-align: center;
   }
 }
-section .showcase-section .showcase p {
+.showcase-section .showcase-container .showcase p {
   margin: 0;
   margin-top: 17px;
   margin-bottom: 45px;
   font-size: 20px;
   color: #191919;
 }
-@media (max-width: 500px) {
-  section .showcase-section .showcase p {
+@media (max-width: 1400px) {
+  .showcase-section .showcase-container .showcase p {
+    margin-left: 25px;
+  }
+}
+@media (max-width: 1200px) {
+  .showcase-section .showcase-container .showcase p {
+    margin: 0;
+    margin-top: 35px;
+    margin-bottom: 55px;
+    text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  .showcase-section .showcase-container .showcase p {
     text-align: center;
     margin-right: 15px;
     margin-left: 15px;
-    margin-bottom: 35px;
+    margin-bottom: 55px;
+    margin-top: 35px;
   }
 }
-section .showcase-section .showcase .showcase-buttons-section {
+.showcase-section .showcase-container .showcase .showcase-buttons-section {
   display: flex;
 }
-@media (max-width: 500px) {
-  section .showcase-section .showcase .showcase-buttons-section {
+@media (max-width: 1400px) {
+  .showcase-section .showcase-container .showcase .showcase-buttons-section {
+    margin-left: 25px;
+  }
+}
+@media (max-width: 1200px) {
+  .showcase-section .showcase-container .showcase .showcase-buttons-section {
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .showcase-section .showcase-container .showcase .showcase-buttons-section {
     display: block;
   }
 }
-section .showcase-section .showcase .showcase-buttons-section a {
+.showcase-section .showcase-container .showcase .showcase-buttons-section a {
   width: 200px;
   height: 60px;
   margin-right: 15px;
 }
-@media (max-width: 500px) {
-  section .showcase-section .showcase .showcase-buttons-section a {
+@media (max-width: 768px) {
+  .showcase-section .showcase-container .showcase .showcase-buttons-section a {
     margin: auto;
     margin-bottom: 20px;
   }
 }
-section .showcase-section .showcase .showcase-buttons-section #learn-more {
+.showcase-section .showcase-container .showcase .showcase-buttons-section #learn-more {
   background-color: transparent;
   border: 1px solid black;
   width: 180px;
 }
-section .showcase-section .showcase .showcase-buttons-section #learn-more:hover {
+.showcase-section .showcase-container .showcase .showcase-buttons-section #learn-more:hover {
   color: black;
   border: 1px solid rgb(110, 110, 110);
   background-color: rgba(0, 0, 0, 0.048);
 }
-section .showcase-section img {
+.showcase-section .showcase-container img {
   margin-top: 40px;
   margin-right: -50px;
 }
-@media (max-width: 500px) {
-  section .showcase-section img {
+@media (max-width: 1400px) {
+  .showcase-section .showcase-container img {
+    width: 450px;
+    margin-right: 5px;
+  }
+}
+@media (max-width: 1200px) {
+  .showcase-section .showcase-container img {
     display: none;
   }
+}
+@media (max-width: 768px) {
+  .showcase-section .showcase-container img {
+    display: none;
+  }
+}
+
+.logo-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin-top: 72px;
+  margin-bottom: 72px;
+}
+.logo-section .logo-container {
+  width: 100%;
+  max-width: 1320px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
+}
+.logo-section .logo-container img {
+  margin: auto;
+}
+
+.features-section {
+  width: 95%;
+  max-width: 1520px;
+  border: 1px solid #cacaca;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 640px 640px;
+}
+@media (max-width: 1400px) {
+  .features-section {
+    grid-template-columns: 570px 570px;
+  }
+}
+@media (max-width: 1200px) {
+  .features-section {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 768px) {
+  .features-section {
+    grid-template-columns: 1fr;
+  }
+}
+.features-section .features-header .features-header-container {
+  margin-top: 70px;
+  margin-right: 90px;
+  margin-left: 90px;
+}
+@media (max-width: 1400px) {
+  .features-section .features-header .features-header-container {
+    margin-left: 60px;
+  }
+}
+@media (max-width: 1200px) {
+  .features-section .features-header .features-header-container {
+    margin: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .features-section .features-header .features-header-container {
+    margin: 15px;
+    margin-top: 25px;
+    text-align: center;
+  }
+}
+.features-section .features-header .features-header-container h6 {
+  color: red;
+  margin: 0;
+  font-size: 17px;
+  font-weight: 600;
+}
+@media (max-width: 1200px) {
+  .features-section .features-header .features-header-container h6 {
+    text-align: center;
+  }
+}
+.features-section .features-header .features-header-container h2 {
+  font-size: 42px;
+  margin: 0;
+  margin-top: 15px;
+  margin-bottom: 33px;
+}
+@media (max-width: 1200px) {
+  .features-section .features-header .features-header-container h2 {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 43px;
+  }
+}
+.features-section .features-header .features-header-container #learn-more {
+  width: 95%;
+}
+@media (max-width: 1200px) {
+  .features-section .features-header .features-header-container #learn-more {
+    margin: auto;
+    margin-bottom: 50px;
+    width: 75%;
+  }
+}
+@media (max-width: 768px) {
+  .features-section .features-header .features-header-container #learn-more {
+    margin-bottom: 0;
+  }
+}
+.features-section .features-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-bottom: 85px;
+  margin-left: 30px;
+}
+@media (max-width: 1400px) {
+  .features-section .features-grid {
+    margin-left: 0;
+  }
+}
+@media (max-width: 1200px) {
+  .features-section .features-grid {
+    margin: 0;
+  }
+}
+@media (max-width: 768px) {
+  .features-section .features-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+.features-section .features-grid .features-grid-container {
+  margin-top: 80px;
+  margin-right: 130px;
+  width: 200px;
+}
+@media (max-width: 1400px) {
+  .features-section .features-grid .features-grid-container {
+    margin-right: 100px;
+  }
+}
+@media (max-width: 1200px) {
+  .features-section .features-grid .features-grid-container {
+    margin: auto;
+    margin-bottom: 60px;
+  }
+}
+@media (max-width: 768px) {
+  .features-section .features-grid .features-grid-container {
+    margin: auto;
+    margin-top: 80px;
+    text-align: center;
+  }
+}
+.features-section .features-grid .features-grid-container i {
+  font-size: 30px;
+  margin-bottom: 13px;
+}
+.features-section .features-grid .features-grid-container h3 {
+  font-size: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.features-section .features-grid .features-grid-container p {
+  margin: 0;
 }
