--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 }
 
 html, body{
-    background-color: #F0EFE9;
+    background-color: white;
 
     margin: 0;
 
@@ -29,7 +29,11 @@ html, body{
 
     background-color: #F9D783;
 
-    @media (max-width: 500px){
+    @media (max-width: 992px){
+        width: 110px;
+    }
+
+    @media (max-width: 768px){
         margin: auto;
         margin-top: 18px;
     }
@@ -45,171 +49,233 @@ html, body{
 }
 
 header{
-    margin: auto;
+    width: 100%;
 
-    height: 120px;
-    width: 1300px;
+    background-color: #F0EFE9;
 
-    display: flex;
+    .header-container{
+        margin: auto;
+    
+        height: 120px;
+        width: 1300px;
+    
+        display: flex;
 
-    @media (max-width: 500px){
-        position: relative;
-
-        width: 100%;
-    }
-
-    img{
-        width: 137px;
-
-        margin-right: 3vw;
-
-        @media (max-width: 500px){
-            margin-left: 3vw;
-            
-            width: 270px;
+        @media (max-width: 1400px){
+            width: 1000px;
         }
-    }
-    .header{
-        position:relative;
-        
-        width: 100%;
 
-        @media (max-width: 500px){
-            position: static;
+        @media (max-width: 1200px){
+            width: 800px;
         }
-        .contact{
-            display: flex;
 
-            margin-top: 12px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #cacaca;
-
-            @media (max-width: 500px){
-                display:none;
-            }
+        @media (max-width: 992px){
+            width: 600px;
         }
-        .info{
-            width: 200px;
-
-            margin-left: 0.2vw;
-            margin-right: 0.2vw;
-
-            font-size: 15px;
-
+    
+        @media (max-width: 768px){
             position: relative;
+    
+            width: 100%;
+        }
 
-            &::after{
-                content: '';
 
-                position: absolute;
-                right: 0;
-
-                width: 1px;
-                height: 90%;
+    
+        img{
+            width: 137px;
+    
+            margin-right: 3vw;
+    
+            @media (max-width: 768px){
+                margin-left: 3vw;
                 
-                background-color: #cacaca;
-
-            }
-
-            i{
-                margin: 0.1vw;
-
-                font-size: 20px;
-
-                color: #191919;
+                min-width: 170px;
             }
         }
-        #location-social{
-            width: calc(100% - 185px*2);
-
-            display:flex;
-            justify-content: space-between;
-
-            &::after{
-                display:none;
-
+        .header{
+            position:relative;
+            
+            width: 100%;
+    
+            @media (max-width: 768px){
+                position: static;
             }
-
-            .social{
-                i{
-                    font-size: 16px;
-
-                    margin-right: 0.3vw;
-
-                    &:hover{
-                        color: #5a5a5a;
-                    }
+            .contact{
+                display: flex;
+    
+                margin-top: 12px;
+                padding-bottom: 10px;
+                border-bottom: 1px solid #cacaca;
+    
+                @media (max-width: 768px){
+                    display:none;
                 }
             }
-        }
-        .nav{
-            width: 100%;
-            
-            justify-content: space-between;
+            .info{
+                width: 200px;
+    
+                margin-left: 0.2vw;
+                margin-right: 0.2vw;
+    
+                font-size: 15px;
+    
+                position: relative;
 
-            position:absolute;
-            bottom: 0;
-
-            @media(min-width: 501px){ //Var tvungen att lägga till denna media query för att elementet inte skulle förbli "display: block" efter att man använt meny-knappen
-                display: flex !important; //Utan !important förblir elementet "display:block" i vissa fall
+                @media (max-width: 1200px){
+                    display:none;
+                }
+    
+                &::after{
+                    content: '';
+    
+                    position: absolute;
+                    right: 0;
+    
+                    width: 1px;
+                    height: 90%;
+                    
+                    background-color: #cacaca;
+    
+                }
+    
+                i{
+                    margin: 0.1vw;
+    
+                    font-size: 20px;
+    
+                    color: #191919;
+                }
             }
-
-            @media(max-width: 500px){
-                display:none;
-                
-                background-color:#f0efe9f6;
-
-                z-index: 999;
-
-                top: 120px;
-                left: 0;
-
-                height: 410px;
-            }
-
-            nav{
-                width: 306px;
-
+            #location-social{
+                width: calc(100% - 185px*2);
+    
                 display:flex;
                 justify-content: space-between;
 
-                @media(max-width: 500px){
+                @media (max-width: 1200px){
+                    justify-content: end;
+
                     width: 100%;
-
-                    display:block;
                 }
-                
-                a{
-                    text-decoration: none;
-                    color: #191919;
+    
+                &::after{
+                    display:none;
+    
+                }
 
-                    margin-bottom: 11px;
-
-                    position:relative;
-
-                    @media (max-width: 500px){
-                        text-align: center;
-
-                        margin: 0;
-
-                        width: 100%;
-
-                        padding-top: 27px;
-                        padding-bottom: 27px;
-
-                        display:block;
-
-                        font-size: 1.1rem;
-
-                        // color:#F0EFE9;
-
-                        &:hover{
-                            background-color: rgba(0, 0, 0, 0.068);
-                        }
-  
+                .location{
+                    @media (max-width: 1200px){
+                        display:none;
                     }
+                }
+    
+                .social{
+                    i{
+                        font-size: 16px;
+    
+                        margin-right: 0.3vw;
+    
+                        &:hover{
+                            color: #5a5a5a;
+                        }
+                    }
+                }
+            }
+            .nav{
+                width: 100%;
+                
+                justify-content: space-between;
+    
+                position:absolute;
+                bottom: 0;
+    
+                @media(min-width: 769px){ //Var tvungen att lägga till denna media query för att elementet inte skulle förbli "display: block" efter att man använt meny-knappen
+                    display: flex !important; //Utan !important förblir elementet "display:block" i vissa fall
+                }
+    
+                @media(max-width: 768px){
+                    display:none;
+                    
+                    background-color:#f0efe9f6;
+    
+                    z-index: 999;
+    
+                    top: 120px;
+                    left: 0;
+    
+                    height: 410px;
+                }
+    
+                nav{
+                    width: 306px;
+    
+                    display:flex;
+                    justify-content: space-between;
 
-                    &:hover::after{
+                    @media (max-width: 992px){
+                        width: 290px;
+                    }
+    
+                    @media(max-width: 768px){
+                        width: 100%;
+    
+                        display:block;
+                    }
+                    
+                    a{
+                        text-decoration: none;
+                        color: #191919;
+    
+                        margin-bottom: 11px;
+    
+                        position:relative;
+    
+                        @media (max-width: 768px){
+                            text-align: center;
+    
+                            margin: 0;
+    
+                            width: 100%;
+    
+                            padding-top: 27px;
+                            padding-bottom: 27px;
+    
+                            display:block;
+    
+                            font-size: 1.1rem;
+    
+                            // color:#F0EFE9;
+    
+                            &:hover{
+                                background-color: rgba(0, 0, 0, 0.068);
+                            }
+      
+                        }
+    
+                        &:hover::after{
+                            content: '';
+        
+                            margin:auto;
+                            
+                            position:absolute;
+                            bottom: 13px;
+                            right: 0;
+                            left: 0;
+        
+                            width: 60%;
+                            height: 2px;
+        
+                            background-color: #191919;
+    
+                            @media (max-width: 768px){
+                                display:none;
+                            }
+    
+                        }
+    
+                    }
+    
+                    #here::after{
                         content: '';
     
                         margin:auto;
@@ -219,92 +285,92 @@ header{
                         right: 0;
                         left: 0;
     
-                        width: 60%;
+                        width: 40%;
                         height: 2px;
     
                         background-color: #191919;
-
-                        @media (max-width: 500px){
+    
+                        @media (max-width: 768px){
                             display:none;
                         }
-
+    
                     }
-
                 }
-
-                #here::after{
-                    content: '';
-
-                    margin:auto;
-                    
-                    position:absolute;
-                    bottom: 13px;
-                    right: 0;
-                    left: 0;
-
-                    width: 40%;
-                    height: 2px;
-
-                    background-color: #191919;
-
-                    @media (max-width: 500px){
-                        display:none;
-                    }
-
+                
+            }
+            .menu{
+                border: none;
+                
+                position: absolute;
+                right: 3vw;
+                top: 35px;
+    
+                background-color: transparent;
+    
+                border-radius: 5px;
+    
+                @media (min-width: 769px){
+                    display:none;
                 }
-            }
-            
-        }
-        .menu{
-            border: none;
-            
-            position: absolute;
-            right: 3vw;
-            top: 35px;
-
-            background-color: transparent;
-
-            border-radius: 5px;
-
-            @media (min-width: 501px){
-                display:none;
-            }
-
-            &:hover{
-                background-color: rgba(0, 0, 0, 0.068);
-                cursor: pointer;
-            }
-
-            i{
-                font-size: 2.8rem;
+    
+                &:hover{
+                    background-color: rgba(0, 0, 0, 0.068);
+                    cursor: pointer;
+                }
+    
+                i{
+                    font-size: 2.8rem;
+                }
             }
         }
     }
 }
 
-section{
+.showcase-section{
     position:relative;
 
+    background-color: #F0EFE9;
+
     .element{
+        width: 650px;
+
         position: absolute;
         bottom: 0;
         left: 0;
 
         pointer-events: none; //Detta för att man ska kunna klicka på knapparna när de egentligen ligger bakom denna bilden
 
-        @media (max-width: 500px){
+        @media (max-width: 1400px){
+            width: 500px;
+        }
+
+        @media (max-width: 768px){
             display:none;
         }
     }
 
-    .showcase-section{
+    .showcase-container{
         width: 1300px;
 
         margin: auto;
 
         display: flex;
 
-        @media (max-width: 500px){
+        @media (max-width: 1400px){
+            width: 1000px;
+
+            align-items: center;
+        }
+
+        @media (max-width: 1200px){
+            width: 800px;
+        }
+
+        @media (max-width: 992px){
+            width: 600px;
+        }
+
+        @media (max-width: 768px){
             width: 100%;
         }
 
@@ -315,7 +381,21 @@ section{
                 margin: 0;
                 margin-top: 100px;
 
-                @media (max-width: 500px){
+                @media (max-width: 1400px){
+                    font-size: 3.5rem;
+
+                    margin-left: 25px;
+                    margin-top: 0;
+                }
+
+                @media (max-width: 1200px){
+                    text-align: center;
+
+                    margin: 15px;
+                    margin-top: 30px;
+                }
+
+                @media (max-width: 768px){
                     font-size: 3rem;
 
                     margin: 10px;
@@ -333,19 +413,43 @@ section{
 
                 color: #191919;
 
-                @media (max-width: 500px){
+                @media (max-width: 1400px){
+                    margin-left: 25px;
+                }
+
+                @media (max-width: 1200px){
+                    margin: 0;
+                    margin-top: 35px;
+                    margin-bottom: 55px;
+
+                    text-align: center;
+                }
+
+                @media (max-width: 768px){
                     text-align: center;
 
                     margin-right: 15px;
                     margin-left: 15px;
-                    margin-bottom: 35px;
+                    margin-bottom: 55px;
+                    margin-top: 35px;
                 }
             }
 
             .showcase-buttons-section{
                 display:flex;
 
-                @media (max-width: 500px){
+                @media (max-width: 1400px){
+
+                    margin-left: 25px;
+                }
+
+                @media (max-width: 1200px){
+                    justify-content: center;
+
+                    margin-bottom: 50px;
+                }
+
+                @media (max-width: 768px){
                     display: block;
                 }
 
@@ -355,7 +459,7 @@ section{
 
                     margin-right: 15px;
 
-                    @media (max-width: 500px){
+                    @media (max-width: 768px){
                         margin: auto;
                         margin-bottom: 20px;
                     }
@@ -383,9 +487,207 @@ section{
             margin-top: 40px;
             margin-right: -50px;
 
-            @media (max-width: 500px){
+            @media (max-width: 1400px){
+                width: 450px;
+
+                margin-right: 5px;
+            }
+
+            @media (max-width: 1200px){
                 display:none;
+            }
+
+            @media (max-width: 768px){
+                display:none;
+            }
+
+
+        }
+    }
+}
+
+.logo-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: white;
+
+    margin-top: 72px;
+    margin-bottom: 72px;
+
+    .logo-container{
+        width: 100%;
+        max-width: 1320px;
+
+        display:grid;
+        grid-template-columns: repeat(auto-fit,minmax(224px, 1fr));
+
+        img{
+            margin: auto;
+        }
+    }
+
+
+}
+
+.features-section{
+    width: 95%;
+    max-width: 1520px;
+
+    border: 1px solid #cacaca;
+
+    margin: auto;
+
+    display: grid;
+    grid-template-columns: 640px 640px;
+
+    @media (max-width: 1400px){
+        grid-template-columns: 570px 570px;
+    }
+
+    @media(max-width: 1200px){
+        grid-template-columns: 1fr;
+    }
+
+    @media (max-width: 768px){
+        grid-template-columns: 1fr;
+    }
+
+
+    
+
+    .features-header{
+
+        .features-header-container{
+            margin-top: 70px;
+            margin-right: 90px;
+            margin-left: 90px;
+
+            @media (max-width: 1400px){
+                margin-left: 60px;
+            }
+
+            @media(max-width: 1200px){
+                margin: 40px;
+
+            }
+
+            @media (max-width: 768px){
+                margin: 15px;
+                margin-top: 25px;
+
+                text-align: center;
+            }
+   
+            h6{
+                color: red;
+
+                margin: 0;
+
+                font-size: 17px;
+                font-weight: 600;
+
+                @media(max-width: 1200px){
+                    text-align: center;
+                }
+            }
+
+            h2{
+                font-size: 42px;
+
+                margin: 0;
+                margin-top: 15px;
+                margin-bottom: 33px;
+
+                @media(max-width: 1200px){
+                    text-align: center;
+
+                    margin-top: 25px;
+                    margin-bottom: 43px;
+                }
+            }
+
+            #learn-more{
+                width: 95%;
+
+                @media(max-width: 1200px){
+                    margin: auto;
+                    margin-bottom: 50px;
+
+                    width: 75%;
+                }
+
+                @media (max-width: 768px){
+                    margin-bottom: 0;
+                }
             }
         }
     }
+
+
+    .features-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+
+        margin-bottom: 85px;
+        margin-left: 30px;
+
+        @media (max-width: 1400px){
+            margin-left: 0;
+        }
+
+        @media(max-width: 1200px){
+            margin: 0;
+        }
+
+        @media(max-width: 768px){
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(4, 1fr);
+        }
+
+
+
+        .features-grid-container{
+            margin-top: 80px;
+
+            margin-right: 130px;
+
+            width: 200px;
+
+            @media (max-width: 1400px){
+                margin-right: 100px;
+            }
+
+            @media(max-width: 1200px){
+                margin:auto;
+                margin-bottom: 60px;
+            }
+
+            @media (max-width: 768px){
+                margin: auto;
+                margin-top: 80px;
+
+                text-align: center;
+            }
+
+            i{
+                font-size: 30px;
+
+                margin-bottom: 13px;
+            }
+            h3{
+                font-size: 20px;
+
+                margin-top: 15px;
+                margin-bottom: 15px;
+            }
+
+            p{
+                margin: 0;
+            }
+        }
+    }
+    
 }
